# wav-playback-kata

./: .gitattributes  .gitignore  Makefile  Makefile.am  README.md  config.h  config.h.in~  configure  configure.ac  main.c  wavout
